--- a/layouts.css
+++ b/layouts.css
@@ -12,7 +12,7 @@
 	--tone-red: 16, 83%;
 	--color-bkg: #efefef;
 	--font-1: Isoc;
-	--bg-light: hsl(0, 0%, 91.8%);
+	--bg-light: hsl(0, 0%, 94%);
 	--bg-dark: rgb(33, 33, 33);
 }
 
@@ -339,6 +339,12 @@ player-board {
 
 }
 
+player-board input {
+	/* color: var(--bg-light); Control with JS */
+	/* color: var(--bg-dark); Control with JS */
+	color: #999; /* Middle term */
+}
+
 lang-table.center.langer {
 	display: grid;
 	height: 15rem;
@@ -548,6 +554,12 @@ trivia-card.center {
 
 .culture-card svg {
 	margin: 3rem;
+}
+
+culture-card p {
+	/* color: var(--bg-light); JS Dark mode */
+	/* color: var(--bg-dark); JS Light mode */
+	color: #888; /* Middle term */
 }
 
 .culture-answer {
