--- a/layouts.css
+++ b/layouts.css
@@ -12,7 +12,7 @@
 	--tone-red: 16, 83%;
 	--color-bkg: #efefef;
 	--font-1: Isoc;
-	--bg-light: hsl(0, 0%, 91.8%);
+	--bg-light: hsl(0, 0%, 94%);
 	--bg-dark: rgb(33, 33, 33);
 }
 
@@ -339,6 +339,12 @@ player-board {
 
 }
 
+player-board input {
+	/* color: var(--bg-light); Control with JS */
+	/* color: var(--bg-dark); Control with JS */
+	color: #999; /* Middle term */
+}
+
 lang-table.center.langer {
 	display: grid;
 	height: 15rem;
@@ -550,6 +556,16 @@ trivia-card.center {
 	margin: 3rem;
 }
 
+culture-card [data-event="flip"] {
+	cursor: pointer;
+}
+
+culture-card p, trivia-card p {
+	/* color: var(--bg-light); JS Dark mode */
+	/* color: var(--bg-dark); JS Light mode */
+	color: #888; /* Middle term */
+}
+
 .culture-answer {
 	margin: 0 auto 4rem auto;
 	text-align: center;
@@ -572,6 +588,7 @@ button {
 	border: solid #ccc 1px;
 	max-width: 80vw;
 	text-align: center;
+	cursor: pointer;
 }
 
 button[data-country] {
